--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -20,8 +20,13 @@ jobs:
       matrix:
         config:
           - {os: macos-latest,   r: 'release'}
+          - {os: macos-latest,   r: '4.1.3'}
           - {os: windows-latest, r: 'release'}
+          - {os: windows-latest, r: '4.1.3'}
+          - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
           - {os: ubuntu-latest,   r: 'release'}
+          - {os: ubuntu-latest,   r: 'oldrel-1'}
+          - {os: ubuntu-latest,  r: '4.1.3'}
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
